# resman

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  a.out  docs.txt  install.sh  mkuser.sh  prompt-alert.sh  pyproject.toml  readme.md  readme.txt  resman.py  resmand.service  seelog.sh  test.c  testclient.sh  todo.md
.github/workflows/: black.yml
c/: .clang-format  .gitignore  Makefile  Session.vim  a.out  docs.txt  resman  server.c  testclient.sh
c/client/: arg.c  client.c  cmd.c
c/common/: common.c
c/include/: client.h  resman.h  server.h
c/server/: ipc.c  queue.c  server.c
client/: arg.c  client.c  cmd.c
common/: common.c
include/: client.h  resman.h  server.h
old_python/: install.sh  pyproject.toml
resman_icon/: README.md  main.py
rewrite/: cli  client.c  common.c  common.h  dae  manager.c  plan.md  plan2.md  test.c
rewrite/client/: main.c  resman
rewrite/daemon/: a.out  daemon.h  main.c
rsman/: Cargo.toml  resman.db
rsman/lib/: resman_common.rs
rsman/src/client/: main.rs
rsman/src/daemon/: main.rs  shared_queue.rs
server/: ipc.c  queue.c  server.c
