[package]
name = "rsman"
version = "0.1.0"
edition = "2021"

[lib]
name = "resman_common"
path = "lib/resman_common.rs"

[[bin]]
name = "resdaemon"
path = "src/daemon/main.rs"

[[bin]]
name = "resman"
path = "src/client/main.rs"

[dependencies]
nix = { version = "0.28.0", features = ["signal"] }
serde = "1.0.201"
tokio = { version = "1", features = ["full"] }
