[package]
name = "rsman"
version = "0.1.0"
edition = "2021"

[lib]
name = "resman_common"
path = "lib/resman_common.rs"

[[bin]]
name = "resdaemon"
path = "src/daemon/main.rs"

[[bin]]
name = "resman"
path = "src/client/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
nix = { version = "0.28.0", features = ["signal", "user"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
